--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-informational-site",
+  "name": "mini-message-board",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
