--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed": "NODE_ENV=development node db/populatedb.js",
+    "seed:prod": "NODE_ENV=production node db/populatedb.js"
   },
   "keywords": [],
   "author": "",
